kubernetes/llama-serve/llama3.2-3b/vllm.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: llama32-3b
  labels:
    app: llama32-3b
    app.kubernetes.io/instance: llama-vllm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama32-3b
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: llama32-3b
      annotations:
        sidecar.opentelemetry.io/inject: vllm-otelsidecar
    spec:
      volumes:
        - name: hf-cache
          emptyDir: {}
        - name: triton
          emptyDir: {}
        - name: chat-template
          configMap:
            name: llama32-3b-template
            defaultMode: 420
        - name: config
          emptyDir: {}
      containers:
        - resources:
            limits:
              nvidia.com/gpu: '1'
          terminationMessagePath: /dev/termination-log
          name: llama32-3b
          ports:
            - containerPort: 8000
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: hf-cache
              mountPath: /.cache
            - name: triton
              mountPath: /.triton
            - name: chat-template
              mountPath: /app
            - name: config
              mountPath: /.config
          terminationMessagePolicy: File
          image: 'vllm/vllm-openai:v0.7.3'
          args:
            - '--model'
            - meta-llama/Llama-3.2-3B-Instruct
            - '--enable-auto-tool-choice'
            - '--chat-template'
            - /app/tool_chat_template_llama3.2_json.jinja
            - '--tool-call-parser'
            - llama3_json
            - '--port'
            - '8000'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: wrk-4
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
